--- a/eye.bib
+++ b/eye.bib
@@ -161,3 +161,37 @@
   volume={32},
   year={2019}
 }
+
+
+@inproceedings{ronneberger2015u,
+  title={U-net: Convolutional networks for biomedical image segmentation},
+  author={Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
+  booktitle={Medical Image Computing and Computer-Assisted Intervention--MICCAI 2015: 18th International Conference, Munich, Germany, October 5-9, 2015, Proceedings, Part III 18},
+  pages={234--241},
+  year={2015},
+  organization={Springer}
+}
+
+
+@article{zijdenbos1994morphometric,
+  title={Morphometric analysis of white matter lesions in MR images: method and validation},
+  author={Zijdenbos, Alex P and Dawant, Benoit M and Margolin, Richard A and Palmer, Andrew C},
+  journal={IEEE transactions on medical imaging},
+  volume={13},
+  number={4},
+  pages={716--724},
+  year={1994},
+  publisher={IEEE}
+}
+
+
+@article{taha2015metrics,
+  title={Metrics for evaluating 3D medical image segmentation: analysis, selection, and tool},
+  author={Taha, Abdel Aziz and Hanbury, Allan},
+  journal={BMC medical imaging},
+  volume={15},
+  number={1},
+  pages={1--28},
+  year={2015},
+  publisher={BioMed Central}
+}
