--- a/eye.bib
+++ b/eye.bib
@@ -207,3 +207,12 @@
   year={2007},
   publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
 }
+
+@article{y,
+  title={Google colaboratory},
+  author={Bisong, Ekaba and Bisong, Ekaba},
+  journal={Building machine learning and deep learning models on google cloud platform: a comprehensive guide for beginners},
+  pages={59--64},
+  year={2019},
+  publisher={Springer}
+}
