--- a/eye.bib
+++ b/eye.bib
@@ -216,3 +216,14 @@
   year={2019},
   publisher={Springer}
 }
+
+@article{li2016first,
+  title={The first step for neuroimaging data analysis: DICOM to NIfTI conversion},
+  author={Li, Xiangrui and Morgan, Paul S and Ashburner, John and Smith, Jolinda and Rorden, Christopher},
+  journal={Journal of neuroscience methods},
+  volume={264},
+  pages={47--56},
+  year={2016},
+  publisher={Elsevier}
+}
+
