I have added some figures.

--- a/eye_segmentation.tex
+++ b/eye_segmentation.tex
@@ -145,13 +145,37 @@ of a GPU I did not continue down that route.
 
 \section{New data sets}
 
+\begin{figure}
+\centering
+\includegraphics[%
+  scale=0.3, 
+  angle=0,keepaspectratio=true,
+  origin=c,clip]{./figures/HD_patient.png} 
+\caption{Eyes from the new MRI scans on 24/1/2023}
+\label{fg:eyeHigh}
+\end{figure}
+
+
+\begin{figure}
+\centering
+\includegraphics[%
+  scale=0.3, 
+  angle=0,keepaspectratio=true,
+  origin=c,clip]{./figures/HD_patient_lenses.png } 
+\caption{Lenses from the new MRI scans on 24/1/2023}
+\label{fg:HDlenses}
+\end{figure}
+
+
+
 A new data set (taken at BRIC using the 3T MRI scanner), tagged as
 24/1/2023,on the MS teams was investigated. The 3Dslicer software was
 used to manually segmentate the eyes from the MRI scans. The new scans
 had much higher resolution than the scans taken in 2022, so it was
 easier to extract the eyes. There was a slight imbalance in the
 definition of the two eyes, possibly because of a slight tilt of the
-head.
+head. The extracted eyes are in figure~\ref{fg:eyeHigh} and the lenses
+in figure~\ref{fg:HDlenses}.
 
 
 The Oasis Project~\cite{van2021mri} provides MRI scans of the heads of
